--- a/css/base.css
+++ b/css/base.css
@@ -18,12 +18,17 @@ html {
     top: -20px;
 }
 
+i {
+    color: #000000;
+}
+
 .flex {
     display: flex;
 }
 
 * {
-    color: white;
+    color: black;
+    /* color: white; */
     font-weight: 100;
 }
 
@@ -105,9 +110,45 @@ body {
     align-items: center;
 }
 
-.scroller {
-    flex-direction: column;
+.main_index .scroller {
     justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.scroller {
+    padding: 15px;
+    margin: 25px;
+    border-radius: 25px;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1;
+    width: 14vw;
+    background-color: whitesmoke;
+    left: 10px;
+    top: 260px;
+    overflow-x: hidden;
+    transition: ease-in-out .5s;
+    box-shadow: 0px 22px 28px 13px #02010188;
+}
+
+.scroller a {
+    color: #000000;
+    margin-top: 10px;
+    font-size: 120%;
+    transition: all .5s ease-in-out;
+}
+
+.scroller:hover {
+    transform: scale(1.1);
+}
+
+.scroller a:hover {
+    color: #8500b9;
+}
+
+.scroller h4 {
+    color: #8500b9;
 }
 
 header {
@@ -180,6 +221,7 @@ header {
 
     padding: 30px;
 }
+
 /* .dweb_type{
     /* font-size: 90%;
 } */
@@ -232,11 +274,12 @@ header {
     align-items: center;
     justify-content: center;
 }
-.iteminfo{
+
+.iteminfo {
     padding: 5px;
     margin: 5px;
     border-radius: 10px;
-    background-color: rgba(2, 2, 2, 0.651) ;
+    background-color: rgba(2, 2, 2, 0);
 }
 
 .apropos {
@@ -249,6 +292,7 @@ header {
     margin: 25px;
     padding: 10px;
     border-radius: 25px;
+    width: 25vw;
 }
 
 .artpres {
@@ -263,7 +307,7 @@ header {
 }
 
 .presentation {
-   
+
     flex-direction: column;
     width: 90vw;
 }
@@ -272,8 +316,8 @@ header {
     padding: 5px;
     margin: 5px;
     border-radius: 10px;
-    background-color: rgba(2, 2, 2, 0.651) ;
-    color: #ebe7e7;
+    background-color: rgba(0, 0, 0, 0);
+    color: #000000;
     text-align: justify;
 
 }
@@ -310,5 +354,33 @@ header {
     align-items: flex-end;
     flex-direction: column;
 }
+.contact_box{
+    margin: auto;
+    border-radius: 25px;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0px 22px 28px 13px #02010188;
+    background-color: whitesmoke;
+    padding: 10px;
+    max-width: 13vw;
+    transition: all .5s ease-in-out;
 
+}
+.contact_box:hover{
+    transform: scale(1.2);
+}
+.contact h4{
+    color: #000000;
+    background-color: whitesmoke;
+    padding: 10px;
+    max-width: 13vw;
+}
+.contact h4:hover{
+    color: #8500b9;
+}
+.flag{
+    width: 10vw;
+    height: 10vw;
+}
 /* footer */
