--- a/templates/base.twig
+++ b/templates/base.twig
@@ -6,8 +6,7 @@
 		<head>
 			<meta charset="UTF-8">
 
-			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-			<link rel="stylesheet" href="css/reset.css">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">			<link rel="stylesheet" href="css/reset.css">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> {% block CSS %}{% endblock %}
 			<link rel="stylesheet" href="css/animate.css">
@@ -15,10 +14,10 @@
 			<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 			<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-			<link rel="icon" href="favicon.ico" type="image/x-icon">
+			<link rel="icon" href="../favicon.ico" type="image/x-icon">
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-			<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet"
+			<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
