--- a/templates/base.twig
+++ b/templates/base.twig
@@ -29,6 +29,8 @@
 		{% block footer %}
 
 			<footer>
+			<script src="scripts/scripts.js">
+			</script>
 				<div class="moi_footer"></div>
 				<nav class="navfooter">
 					<ul></ul>
