--- a/css/competenceDweb.css
+++ b/css/competenceDweb.css
@@ -1,11 +1,11 @@
 
-.htmldweb:after {
+/* .htmldweb:after {
     content: " ";
     display: block;
     position: absolute;
     top: -999vh;
     left: 0;
-    bottom: -260vh;
+    bottom: -999vh;
     right: 0;
     background: rgba(18, 16, 16, 0.1);
     opacity: 0;
@@ -21,14 +21,14 @@
     position: absolute;
     top: -999vh;
     left: 0;
-    bottom: -260vh;
+    bottom: -999vh;
     right: 0;
     background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
     z-index: 2;
     background-size: 100% 2px, 3px 100%;
     pointer-events: none;
-    overflow: hidden;
-}
+    overflow: hidden; 
+} */
 
 .htmldweb {
     animation: textShadow 1.6s infinite;
