--- a/templates/base.twig
+++ b/templates/base.twig
@@ -8,7 +8,9 @@
 
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">			<link rel="stylesheet" href="css/reset.css">
 			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> {% block CSS %}{% endblock %}
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+			{% block CSS %}
+			{% endblock %}
 			<link rel="stylesheet" href="css/animate.css">
 			<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
@@ -25,17 +27,21 @@
 		</head>
 		{% block body %}
 							<p> WORK IN PROGRESS </p>
-							{% endblock body %}
-		{% block footer %}
+		{% endblock body %}
 
+		{% block footer %}
 			<footer>
 			<script src="scripts/scripts.js">
 			</script>
-				<div class="moi_footer"></div>
-				<nav class="navfooter">
-					<ul></ul>
+				<div class="moi_footer flex">
+				<nav class="navfooter flex">
+					<ul>
+						{% for element in type_contenu %}
+						<li><a href="competence.php?id={{ element.id_type_contenu }}"></a></li>
+						{% endfor %}
+					</ul>
 				</nav>
-			</footer>
-		</html>
-	</body>
-</div></body></div>{% endblock footer %}</body></html></php>
+				</div>
+				</footer>
+		{% endblock footer %}
+		</php>
