--- a/templates/competence_template.twig
+++ b/templates/competence_template.twig
@@ -56,6 +56,9 @@
 							{% endfor %}
 						</section>
 					</main>
-				</body>
 			{% endfor %}
 		{% endblock body %}
+				{% block footer %}
+
+		{% endblock footer %}
+
