--- a/css/competenceDweb.css
+++ b/css/competenceDweb.css
@@ -27,7 +27,7 @@
     z-index: 2;
     background-size: 100% 2px, 3px 100%;
     pointer-events: none;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .htmldweb {
