--- a/css/competenceComdi.css
+++ b/css/competenceComdi.css
@@ -53,7 +53,7 @@
 .img_comdi{
     justify-content: center;
     align-items: center;
-    max-width : 50vw;
+    max-width : 40vw;
     height: auto;
     border-radius: 25px;
     border: 2px solid rgb(231, 231, 231);
@@ -86,11 +86,12 @@
 .div_comdi>p {
     margin: 10px;
     padding: 5px;
-    font-size: 200%;
+    font-size: 100%;
     color: white;
+    line-height: 2;
 }
 
-.art_comdi .row_comdi:nth-child(3n-2) {
+/* .art_comdi .row_comdi:nth-child(3n-2) {
     align-items: flex-start;
 
     flex-direction: column;
@@ -98,7 +99,7 @@
 
 .art_comdi .row_comdi:nth-child(2) {
     align-items: flex-end;
-}
+} */
     
 
 
