--- a/templates/competence_template.twig
+++ b/templates/competence_template.twig
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="css/competenceDweb.css">
 		<link rel="stylesheet" href="css/competenceComdi.css">
 	{% endblock CSS %}
-	{% block body %}
+	{% block main %}
 		{% for element in titre %}
 			<body class="body_{{element.nomspe_type_contenu}} flex {{element.nomspe_type_contenu}}_crt green_{{element.nomspe_type_contenu}} ">
 				<wrap class="wrapper{{element.nomspe_type_contenu}} flex " role="wrapper">
@@ -25,14 +25,14 @@
 					<main class="main_{{element.nomspe_type_contenu}} flex" role="main">
 						<section class="flex section{{element.nomspe_type_contenu}}">
 							<a href="index.php" class="flex intertitre">
-								<h2 class "flex inter">
+								<h2 class="flex inter">
 									Retour à l'accueil
 								</h2>
 							</a>
 							{% for item in competence %}
 								<article class="flex art_{{element.nomspe_type_contenu}}">
 									<h2 class="flex green_{{element.nomspe_type_contenu}}">{{item.titre_contenu}}</h2>
-									<div class="row_{{element.nomspe_type_contenu}}">
+									<div class="flex row_{{element.nomspe_type_contenu}}">
 										<a class="flex href" href="{{item.lien_contenu}}">
 											<img class="flex img_{{element.nomspe_type_contenu}}" src="image/{{item.image_contenu}}.png" alt="ilustration compétence {{item.nom_type_contenu}}">
 										</a>
@@ -55,10 +55,7 @@
 								</article>
 							{% endfor %}
 						</section>
-					</main>
+					</wrap>
+				</main>
 			{% endfor %}
-		{% endblock body %}
-				{% block footer %}
-
-		{% endblock footer %}
-
+		{% endblock main %}
