modifié :         competence.php 	modifié :         css/base.css 	modifié :         css/competenceAv.css 	modifié :         css/competenceComdi.css 	modifié :         css/competenceDweb.css 	modifié :         image/Bretzel 2.0 La revanche v2.png 	supprimé :        image/FOND.jpg 	supprimé :        image/FOND.png 	supprimé :        image/FONDR.png 	modifié :         image/MegaNerd.png 	modifié :         image/figma.png 	modifié :         image/max_ad.png 	modifié :         templates/base.twig 	modifié :         templates/competence_template.twig 	modifié :         templates/index_template.twig
	css/footer.css
	css/index.css

--- a/css/base.css
+++ b/css/base.css
@@ -1,33 +1,5 @@
 /* utilitaire */
-.contact {
-    font-size: 120% !important;
-    font-weight: bold !important;
-    color: black !important;
-    padding: .3em;
-}
 
-.wip {
-    color: red;
-}
-
-html {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    background: rgb(255, 165, 165);
-    background: -moz-linear-gradient(180deg, rgba(255, 165, 165, 1) 0%, rgba(228, 255, 220, 1) 100%);
-    background: -webkit-linear-gradient(180deg, rgba(255, 165, 165, 1) 0%, rgba(228, 255, 220, 1) 100%);
-    background: linear-gradient(180deg, rgba(255, 165, 165, 1) 0%, rgba(228, 255, 220, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffa5a5", endColorstr="#e4ffdc", GradientType=1);
-    scroll-behavior: smooth;
-    /* background-image: url(../image/FOND.jpg);
-    background-repeat: no-repeat;
-    background-size: 100vh 100vw; */
-    position: relative;
-    /* top: -1.25em; */
-
-}
 
 i {
     color: #000000;
@@ -88,341 +60,9 @@ body {
     align-items: center;
 }
 
-.titre {
-    padding: 1.5625em;
-    /* margin-bottom: 20vh; */
-    background: whitesmoke;
-    flex-direction: column;
-    position: relative;
-    top: 3.75em;
-    font-weight: 600;
-    border-radius: 1.5625em;
-    max-width: 40vw;
-    /* font-size: 95%; */
-}
-
-.titre h1 {
-    color: black;
-    justify-content: center;
-    text-align: center;
-    font-size: 180%;
-}
-
-.titre h2 {
-    color: black;
-    justify-content: center;
-    text-align: center;
-    font-size: 150%;
-}
-
-.main_index {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.main_index .scroller {
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.scroller {
-    padding: 0.9375em;
-    margin: 1.5625em;
-    border-radius: 1.5625em;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    z-index: 1;
-    width: 14vw;
-    background-color: rgba(245, 245, 245, 0.499);
-    left: 0.625em;
-    top: 16.25em;
-    overflow-x: hidden;
-    transition: ease-in-out .5s;
-    box-shadow: 0em 1.375em 1.75em 0.8125em #02010188;
-
-}
-.scroller h4{
-    margin :.5em;
-}
-.scroller a {
-    color: #000000;
-    margin-top: 0.8em;
-    margin-bottom: .8em;
-    font-size: 120%;
-    font-weight: normal;
-    transition: all .5s ease-in-out;
-}
-
-.scroller:hover {
-    transform: scale(1.1);
-    background-color: whitesmoke;
-}
-
-.scroller a:hover {
-    color: #8500b9;
-}
-
-.scroller h4 {
-    color: #8500b9;
-}
-
-header {
-    display: flex;
-    align-items: center;
-    flex-wrap: nowrap;
-    flex-direction: column;
-}
-
-/* carte */
-.nav_main {
-
-    display: flex;
-    justify-content: space-evenly;
-    align-content: center;
-    flex-wrap: nowrap;
-    flex-direction: row;
-}
-
-.placement {
-    margin-top: 40vh;
-    z-index: 1;
-}
-
-.nav_main>ul {
-    display: flex;
-    justify-content: space-between;
-}
-
-.carte {
-    color: black;
-    font-weight: 100;
-
-}
-
-.carte_ul li {
-    align-items: center;
-    text-align: center;
-    flex-direction: column;
-    padding: 1.875em;
-    margin: 1.875em;
-    justify-content: space-around;
-    width: 20vw;
-    height: 50vh;
-    background: rgb(0, 0, 0);
-    transition: all .5s ease-in-out;
-    border-radius: 1.5625em;
-}
-
-/* lignes */
-.ligne {
-    position: absolute;
-    height: .3em;
-    width: 5em;
-    overflow: hidden;
-}
-
-.hover_1:hover {
-    transform: scale(1.1);
-    position: relative;
-    top: -50px;
-    box-shadow: 0em 1.375em 1.75em 0.8125em #000000;
-
-}
-
-.lnav {
-    color: black;
-    font-weight: thin;
-    margin: 0.625em;
-    padding: 0.625em;
-}
-
-/* main */
-.mainIndex {
-    width: 100vw;
-
-    padding: 1.875em;
-}
-
-/* .dweb_type{
-    /* font-size: 90%;
-} */
-.sectionIndex {
-    flex-direction: column;
-    align-items: center;
-}
-
-.intertitre {
-    align-items: center;
-
-}
-
-.skip {
-    margin-top: 35vh;
-    margin-bottom: 100vh;
-    justify-content: center;
-    background-color: transparent;
-    padding: 1.5625em;
-    border-radius: 1.5625em;
-    transition: all .5s ease-in-out;
-
-
-}
-.skip h2{
-    font-weight: 100!important;
-
-}
-.skip:hover {
-    background-color: whitesmoke;
-    /* background-color: #dcf5dc; */
-    transform: scale(1.2);
-    box-shadow: 0em 1.375em 1.75em 0.8125em #02010188;
-    /* trouver meilleur couleur */
-}
-
-.skip:hover h2 {
-    color: #000000;
-    font-weight: 700;
-    text-shadow: #0000007a;
-}
-
-#principale {
-    margin: 1.5625em;
-    padding: 1.5625em;
-    height: 25vh;
-    align-items: center;
-}
-
-.moi {
-    margin: 1.5625em;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.iteminfo {
-    padding: 0.3125em;
-    margin: 0.3125em;
-    border-radius: 0.625em;
-    background-color: rgba(2, 2, 2, 0);
-}
-
-.apropos {
-
-    margin: 0.9375em;
-}
-
-.imgPres {
-    /* max-width : 300px; */
-    margin: 1.5625em;
-    padding: 0.625em;
-    border-radius: 1.5625em;
-    width: 25vw;
-}
-
-.artpres {
-    margin: 1.5625em;
-    padding: 1.5625em;
-}
-
-.artpres>div {
-    margin: 50px;
-    padding: 1.5625em;
-
-}
-
-.presentation {
-
-    flex-direction: column;
-    width: 90vw;
-
-}
-
-.presentation p {
-    padding: 0.3125em;
-    margin: 0.3125em;
-    border-radius: 0.625em;
-    background-color: rgba(0, 0, 0, 0);
-    color: #000000;
-    text-align: justify;
-    line-height: 2!important;
-
-}
-
-.pres1{
-    justify-content: space-evenly;
-}
-
-.presentation .pres1:nth-child(3n-2) {
-    flex-direction: row;
-}
-
-.presentation .pres1:nth-child(2) {
-    flex-direction: row-reverse;
-}
-
-
-.pres1 p::first-letter {
-    font-weight: 500;
-    font-size: larger;
-
-}
-
-.pres1 p {
-    margin: 1.5625em;
-    padding: 0.9375em;
-    font-size: 150%;
-    width: 50vw;
-
-}
-
-.presentation :nth-child(3n-2) {
-    align-items: flex-start;
-    flex-direction: column;
-}
-
-.presentation :nth-child(2) {
-    align-items: flex-end;
-    flex-direction: column;
-}
-
-.contact_box {
-    margin: auto;
-    border-radius: 1.5625em;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0em 1.375em 1.75em 0.8125em #02010188;
-    background-color: whitesmoke;
-    padding: 0.625em;
-    max-width: 13vw;
-    transition: all .5s ease-in-out;
-
-}
-
-.contact_box:hover {
-    transform: scale(1.2);
-}
-
-.contact h4 {
-    color: #000000;
-    background-color: whitesmoke;
-    padding: 0.625em;
-    max-width: 13vw;
-}
-
-.contact h4:hover {
-    color: #8500b9;
-}
-
-.flag {
-    width: 10vw;
-    height: 10vw;
-}
 
 /* footer */
-.footer{
+/* .footer{
     background-color: rgb(51, 51, 51);
     width: 100vw;
     display: flex;
@@ -477,4 +117,4 @@ footer ul li{
 }
 .boite_rs:hover a{
     color: #8500b9;
-}
+} */
