--- a/templates/index_template.twig
+++ b/templates/index_template.twig
@@ -1,6 +1,8 @@
 {% extends "base.twig"%}
 {% block CSS %}
+	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/base.css">
+
 {% endblock CSS %}
 {% block main %}
 	<body class="flex">
@@ -47,7 +49,7 @@
 					<a href="#principale">
 						A propos de moi
 					</a>
-					<a class="flex contact" href="mailto:agathe.dufour.marin@gmail.com?subject=Prise de contact">
+					<a href="mailto:agathe.dufour.marin@gmail.com?subject=Prise de contact">
 						Contact
 						<i class="bi bi-box-arrow-up-right"></i>
 					</a>
