--- a/css/competenceAv.css
+++ b/css/competenceAv.css
@@ -37,7 +37,7 @@
     box-sizing: border-box;
 }
 .body_av {
-    height: 100vw;
+    height: auto;
     width: 100vw;
     background-color: rgb(51, 51, 51);
     font-family: 'Limelight', cursive;
@@ -61,8 +61,6 @@
 
 .main_av {
     color:white;
-    /* justify-content: center;
-    align-items: center; */
     margin: 25px;
     padding: 25px;
 }
@@ -86,7 +84,6 @@
 
 .art_av>h2 {
     font-size: 300%;
-    /* margin-left: 200px; */
     justify-content: center;
     align-items: center;
     max-width: 30vw;
@@ -107,9 +104,9 @@
     padding: 10px;
     margin: 10px;
     background-color: antiquewhite;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     max-width: 30vw;
     border-radius: 25px;
     /* box-shadow: 0px 22px 28px 13px #02010188; */
@@ -121,19 +118,3 @@
     font-size: 100%;
     line-height: 2!important;
 }
-
-/* iframe {
-    margin: auto;
-    border-radius: 25px;
-} */
-
-
-/* h2,
-h1,
-h3,
-h4,
-h5,
-p,
-a {
-    color: white!important;
-} */
