--- a/css/competenceComdi.css
+++ b/css/competenceComdi.css
@@ -1,12 +1,24 @@
+/* .html_comdi{
+    max-width: 100vw;
+    overflow: hidden;
+
+} */
 .body_comdi{
     font-family: 'Playfair Display', serif;
-    height: 100vw;
-    width: 100vw;
+    /* max-height: 100vw;
+    max-width: 100vw; */
     background-color: rgba(148, 133, 93, 0.507);
+    flex-direction: column;
+    justify-content: center;
+
+}
+.wrappercomdi{
+    margin: auto;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 80vw;
 }
-
 .titrecomdi {
     display: flex;
     justify-content: center;
@@ -26,16 +38,16 @@
 }
 
 .sectioncomdi {
+    margin:auto ;
+    max-width: 90vw;
     flex-direction: column;
-    margin: auto;
     justify-content: center;
-    align-items: center;
-    margin-top: 200px;
+    align-items: flex-start;
+    margin-top: 20em;
 }
 
 .art_comdi {
-    margin: 25px;
-    padding: 25px;
+    margin-top: 20em;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -44,20 +56,20 @@
 
 .art_comdi>h2 {
     font-size: 300%;
-    /* margin-left: 200px; */
+   
     justify-content: center;
     align-items: center;
-    max-width: 30vw;
-    /* margin: auto; */
+    max-width: 70vw;
+
 }
 .img_comdi{
     justify-content: center;
     align-items: center;
-    max-width : 40vw;
+    max-width : 30vw;
     height: auto;
     border-radius: 25px;
     border: 2px solid rgb(231, 231, 231);
-    margin :10px;
+    margin: 1em;
     box-shadow: 0px 22px 28px 13px #02010188;
     box-sizing: border-box;
     transition: .3s linear;
@@ -67,17 +79,17 @@
 }
 .row_comdi {
     max-width: 90vw;
-    display: flex;
     flex-direction: row;
     align-items: center;
+
 
 }
 
 .div_comdi {
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     max-width: 40vw;
+    height: auto;
     background-color: #5d9485;
     border-radius: 25px;
 
@@ -86,9 +98,13 @@
 .div_comdi>p {
     margin: 10px;
     padding: 5px;
-    font-size: 100%;
+    font-size: 150%;
     color: white;
     line-height: 2;
+
+}
+.sectioncomdi :nth-last-child(1){
+    margin-bottom: 5em;
 }
 
 /* .art_comdi .row_comdi:nth-child(3n-2) {
