--- a/css/competenceDweb.css
+++ b/css/competenceDweb.css
@@ -36,16 +36,22 @@
     animation: textShadow 1.6s infinite;
 }
 .body_dweb {
-    height: 100vw;
-    width: 100vw;
+    height: auto;
+    width: 90vw;
     background-color: rgb(51, 51, 51);
     /* font-family: 'Source Code Pro', monospace; */
     font-family: 'VT323', monospace;  
     justify-content: center;
     align-items: center;
 }
+.wrapperdweb{
+    margin: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .img_dweb{
-    width : 40vw;
+    width : 30vw;
     height: auto;
     border-radius: 25px;
     border: 2px solid lime;
@@ -82,18 +88,16 @@
     padding: 25px;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    max-width: 90vw;
-}
+    flex-direction: column;}
 
-.art_dweb>h2 {
+/* .art_dweb>h2 {
     font-size: 300%;
     /* margin-left: 200px; */
-    justify-content: center;
+    /* justify-content: center;
     align-items: center;
-    max-width: 30vw;
-    /* margin: auto; */
-}
+    max-width: 30vw; */
+    /* margin: auto; }*/
+
 
 .row_dweb {
     max-width: 90vw;
@@ -102,15 +106,15 @@
 }
 
 .div_dweb {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    max-width: 30vw;
+    align-items: flex-start;
+    max-width: 50vw;
 }
 
 .div_dweb>p {
-    margin: 10px;
-    padding: 5px;
+    margin: 1em;
+    padding: .25em;
     font-size: 200%;
 }
 /* .imgctn{
@@ -120,8 +124,18 @@
     border: 2px solid lime;
     margin :10px;
 } */
+.titre_dweb{
+    font-family: 'VT323', monospace;  
+    color: limegreen;
+    margin: 1em;
+    max-width: 75%;
+    font-size: 300%;
+    text-decoration: underline dotted;
+    font-weight: 400;
 
+}
 .green_dweb {
     font-family: 'VT323', monospace;  
     color: limegreen;
+    margin: 1em;
 }
