--- a/templates/base.twig
+++ b/templates/base.twig
@@ -10,12 +10,18 @@
 			<!-- CSS Bootstrap -->
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 			<link rel="stylesheet" href="css/reset.css">
+			{# <link rel="stylesheet" href="css/base.css"> #}
+			{% block CSS %}
+			{% endblock CSS %}
 			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> {% block CSS %}{% endblock %}
-			<link rel="stylesheet" href="css/competenceAv.css">
-			<link rel="stylesheet" href="css/competenceDweb.css">
-			<link rel="stylesheet" href="css/competenceComdi.css">
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link rel="stylesheet" href="css/footer.css">
 			<link rel="stylesheet" href="css/animate.css">
+						<link rel="stylesheet" href="css/competenceAv.css">
+												<link rel="stylesheet" href="css/competenceDweb.css">
+																		<link rel="stylesheet" href="css/competenceComdi.css">
+
+
 			<link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap" rel="stylesheet">
 			<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
